--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,14 +6,14 @@
     <data>
         <!--<variable
             name="homeViewModel"
-            type="com.example.tataaignewsapp.HomeViewModel" />-->
+            type="com.example.tataaignewsapp.viewmodel.HomeViewModel" />-->
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackground"
-        tools:context=".HomeFragment">
+        tools:context=".ui.fragment.HomeFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvNews"
@@ -21,6 +21,8 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             android:layout_margin="8dp"
+            android:paddingBottom="50dp"
+
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
