--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.tataaignewsapp.HomeFragment"
+        android:name="com.example.tataaignewsapp.ui.fragment.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -15,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.tataaignewsapp.SearchFragment"
+        android:name="com.example.tataaignewsapp.ui.fragment.SearchFragment"
         android:label="SearchFragment" >
         <action
             android:id="@+id/action_searchFragment_to_bookmarksFragment"
@@ -23,7 +23,7 @@
     </fragment>
     <fragment
         android:id="@+id/bookmarksFragment"
-        android:name="com.example.tataaignewsapp.BookmarksFragment"
+        android:name="com.example.tataaignewsapp.ui.fragment.BookmarksFragment"
         android:label="BookmarksFragment" />
 
 
